bootstrap, página de index,login y listar

--- a/Universidad/src/main/resources/application.properties
+++ b/Universidad/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/ndF6A6Yeup
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/umRi25eqsj
 spring.datasource.username=umRi25eqsj
 spring.datasource.password=AsVkGmUMwy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
